2006-05-10  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Fixed bug
      preventing the CPU frequency to be displayed on FreeBSD.
    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Implemented
      some experimental slight performance improvements.

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Stripped
      (R) and (tm) words from displayed CPU model names on Linux.
      Also added patch by Chris B. Vetter to do the same for
      FreeBSD.

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>
    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed
      incorrect text height computation.

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>
    * Subprojects/AboutEtoileEntry/ScrollingImageView.h:
    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed
      NSInvocation bugs and added further refinements. Performace
      remains an issue though...

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>

    * Did some initial refinements on the About Etoile window, however
      further significant cleanups, fixes and speed improvements will
      be needed.

2006-05-07  Nicolas Roard <nicolas@roard.com>

    * AboutEtoileEntry/AboutEtoileEntry.m: Applied a patch from Chris Vetter 
    <chris.vettere@gmail.com> to display the missing entries for 
    CPU, CPU Frequency, and memory on FreeBSD

2006-04-17  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Modified to have EtoileMenuServer installed in 'System' 
    rather than 'Local'.

2006-03-04  Saso Kiselkov <diablos@manga.sk>

    Update based on 2006-03-04 21:03 version.
    * MenuBarHeight.h:
    * SystemBarEntries/AboutEtoileEntry/AboutEtoileEntry.h:
    * SystemBarEntries/AboutEtoileEntry/AboutEtoileEntry.m:
    * SystemBarEntries/AboutEtoileEntry/GNUmakefile:
    * SystemBarEntries/AboutEtoileEntry/English.lproj/AboutEtoileEntry.gorm:
    * EtoileSystemBarEntry.h:
    Added.