@@ -1,5 +1,10 @@
 2006-05-10  Saso Kiselkov <skiselkov@gmail.com>
 
+    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed
+      text view centering issues.
+
+2006-05-10  Saso Kiselkov <skiselkov@gmail.com>
+
     * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Fixed bug
       preventing the CPU frequency to be displayed on FreeBSD.
     * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Implemented
